--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "axios": "^1.6.8",
         "dotenv": "^16.4.5",
         "mysql": "2.18.1",
+        "randomstring": "^1.3.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "5.3.4",
+        "slugify": "^1.6.6",
         "styled-components": "5.3.3"
     },
     "engines": {
