--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@strapi/strapi": "4.21.0",
         "axios": "^1.6.8",
         "dotenv": "^16.4.5",
+        "moment": "^2.30.1",
         "mysql": "2.18.1",
         "randomstring": "^1.3.0",
         "react": "^18.0.0",
