--- a/src/plugins/user/package.json
+++ b/src/plugins/user/package.json
@@ -19,7 +19,8 @@
         "@strapi/design-system": "^1.6.3",
         "@strapi/helper-plugin": "^4.6.0",
         "@strapi/icons": "^1.6.3",
-        "prop-types": "^15.7.2"
+        "prop-types": "^15.7.2",
+        "reactjs-popup": "^2.0.6"
     },
     "devDependencies": {
         "@strapi/typescript-utils": "^4.6.0",
