--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
         "@strapi/plugin-users-permissions": "4.21.0",
         "@strapi/strapi": "4.21.0",
         "axios": "^1.6.8",
+        "creatomate": "^1.1.0",
+        "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
+        "lodash": "^4.17.21",
         "moment": "^2.30.1",
         "mysql": "2.18.1",
         "randomstring": "^1.3.0",
@@ -30,6 +33,7 @@
         "react-dom": "^18.0.0",
         "react-router-dom": "5.3.4",
         "slugify": "^1.6.6",
+        "strapi-plugin-video-thumbnail": "^0.1.2",
         "styled-components": "5.3.3"
     },
     "engines": {
