--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,17 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+
+
+# Database
+DATABASE_CLIENT=mysql
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=3306
+DATABASE_NAME=backend
+DATABASE_USERNAME=qraxiss
+DATABASE_PASSWORD=qraxiss123
+DATABASE_SSL=false
+JWT_SECRET=Z5dYQ2lJ1Zov7IdlARXL4A==
+# Printful
+PRINTFUL_TOKEN=xx
+PRINTFUL_STORE_ID=xx
