--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "creatomate": "^1.1.0",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
+        "fluent-ffmpeg": "^2.1.2",
         "lodash": "^4.17.21",
         "moment": "^2.30.1",
         "mysql": "2.18.1",
