--save-dev react-router-dom

--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
             "**/docs/**"
         ],
         "delay": 2500
+    },
+    "devDependencies": {
+        "@types/react-router-dom": "^5.3.3"
     }
 }
