--- a/src/admin/tsconfig.json
+++ b/src/admin/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "extends": "@strapi/typescript-utils/tsconfigs/admin",
     "include": ["../plugins/**/admin/src/**/*", "./"],
-    "exclude": ["node_modules/", "build/", "dist/", "**/*.test.ts"]
+    "exclude": ["node_modules/", "build/", "dist/", "**/*.test.ts"],
+    "declare": "*.ico"
 }
