--- a/src/plugins/printful/package.json
+++ b/src/plugins/printful/package.json
@@ -16,6 +16,7 @@
         "develop": "tsc -p tsconfig.server.json -w"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.2.5",
         "@strapi/design-system": "^1.6.3",
         "@strapi/helper-plugin": "^4.6.0",
         "@strapi/icons": "^1.6.3",
