--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "creatomate": "^1.1.0",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
+        "ethers": "^6.13.1",
         "fluent-ffmpeg": "^2.1.2",
         "lodash": "^4.17.21",
         "moment": "^2.30.1",
